--- a/src/smartinventorytools/view/MainWindow.fxml
+++ b/src/smartinventorytools/view/MainWindow.fxml
@@ -34,14 +34,14 @@
               <tabs>
                 <Tab text="Сотрудники">
                   <content>
-                    <AnchorPane>
+                    <AnchorPane style="-fx-background-color: white;">
                            <children>
-                              <Button layoutX="282.0" layoutY="28.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Поиск" />
+                              <Button id="search-button" layoutX="281.0" layoutY="28.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" stylesheets="@style.css" text="поиск" />
                               <Button layoutX="1041.0" layoutY="28.0" mnemonicParsing="false" onAction="#btnAddEmployee" prefHeight="25.0" prefWidth="86.0" text="Добавить " />
-                              <Button layoutX="1254.0" layoutY="28.0" mnemonicParsing="false" onAction="#btnDelete" prefHeight="25.0" prefWidth="86.0" text="Удалить" />
+                              <Button id="delete-button" defaultButton="true" layoutX="860.0" layoutY="28.0" mnemonicParsing="false" onAction="#btnDelete" prefHeight="25.0" prefWidth="83.0" stylesheets="@style.css" text="Удалить " />
                               <TextField layoutX="13.0" layoutY="28.0" prefHeight="25.0" prefWidth="261.0" />
                               <Button layoutX="1136.0" layoutY="28.0" mnemonicParsing="false" onAction="#btnEditEmp" prefHeight="25.0" prefWidth="109.0" text="Редактировать" />
-                              <Button layoutX="959.0" layoutY="28.0" mnemonicParsing="false" onAction="#btnRefreshTable" prefHeight="25.0" prefWidth="71.0" text="Обновить" />
+                              <Button id="refresh-button" layoutX="953.0" layoutY="28.0" mnemonicParsing="false" onAction="#btnRefreshTable" prefHeight="25.0" prefWidth="77.0" stylesheets="@style.css" text="обновить" />
                               <TableView fx:id="tableEmployee" layoutX="341.0" layoutY="83.0" maxWidth="-Infinity" prefHeight="601.0" prefWidth="951.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="340.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="83.0">
                                 <columns>
                                   <TableColumn fx:id="employeeIdColumn" prefWidth="119.0" text="employee_id" />
