--- a/src/smartinventorytools/view/FXMLAuthorization.fxml
+++ b/src/smartinventorytools/view/FXMLAuthorization.fxml
@@ -15,7 +15,7 @@
    <children>
       <TextField fx:id="txtUserName" alignment="CENTER" layoutX="60.0" layoutY="166.0" prefHeight="34.0" prefWidth="222.0" promptText="username" style="-fx-background-radius: 30;" />
       <PasswordField fx:id="txtPassword" alignment="CENTER" layoutX="60.0" layoutY="211.0" prefHeight="34.0" prefWidth="222.0" promptText="password" style="-fx-background-radius: 30;" />
-      <Button defaultButton="true" layoutX="60.0" layoutY="272.0" mnemonicParsing="false" onAction="#btnSignIn" prefHeight="34.0" prefWidth="222.0" style="-fx-background-color: orange; -fx-background-radius: 30;" styleClass="style" text="SIGN IN">
+      <Button id="signin-button" defaultButton="true" layoutX="60.0" layoutY="272.0" onAction="#btnSignIn" prefHeight="34.0" prefWidth="222.0" stylesheets="@style.css" text="SIGN IN">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
